fix(Drawer): revert visibility hidden on transition exit done

--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -78,7 +78,7 @@ $block: '.#{variables.$ns}drawer';
 
     &__item-transition-exit-done,
     &__item-transition_direction_right-exit-done {
-        display: none;
+        visibility: hidden;
     }
 
     &__veil {
